# sublime_tests

./: .gitignore  .gitmodules  1.cpp  COMMENT  Current_time.cpp  Current_time1  Current_time3  Current_time3.cpp  Friend function.cpp  Overloading.cpp  PLUSHKI.cpp  POBITOVIY_SDVIG  POBITOVIY_SDVIG.cpp  POLEZNOE.docx  This.cpp  __Обращения к символу строки STL.cpp  __Поиск элемента в векторе.cpp  simple_code  Ввод и вывод.cpp  Инициализация с константой.cpp  Использование указателя.cpp  Наследование класса.cpp  Работа с графикой.cpp  Чтение запись файла.cpp
112_C++20/CaseStudies/: CMakeLists.txt
11_Рао -2017_Освой самостоятельно С++/: .gitignore  10.5 CarMotor  10.6 MethodHiding  7.12_Functions_Lambda.cpp  8.15_Pointers_new_exceptionhandler.cpp  8.16_Pointers_new_nothrow.cpp  8.1_Pointers_ReferencingOperator.cpp  9.10_Singleton.cpp  9.7_MyString_Destructor.cpp  C++.pdf.REMOVED.git-id  CMakeLists.txt
1_Musser_C++_STL/: .gitignore  CMakeLists.txt  CMakeLists.txt.user.e0249c6  ex02-02.cpp  ex02-05.cpp  ex02-06.cpp  ex02-07.cpp  ex02-08.cpp  ex02-15.cpp  ex04-01.cpp  ex05-01.cpp  ex05-02.cpp  ex05-13.cpp  ex05-19.cpp  ex05-22.cpp  ex05-26.cpp  ex05-28.cpp  ex05-29.cpp  ex06-03.cpp  ex06-05.cpp  ex06-07.cpp  ex06-07a.cpp  ex06-08.cpp  ex06-09.cpp  ex06-10.cpp  ex06-11.cpp  ex06-12.cpp  ex06-13.cpp  ex07-01.cpp  ex07-02.cpp  ex07-03.cpp  ex07-03a.cpp  ex07-04.cpp  ex07-04a.cpp  ex10-02.cpp  ex13-01.cpp  ex18-01.cpp  ex19-01.cpp
2_Templates_ C++/: .gitignore  CMakeLists.txt
2_Templates_ C++/basics/: CMakeLists.txt
2_Templates_ C++/deduce/: CMakeLists.txt
2_Templates_ C++/poly/: dynapoly.cpp
2_Templates_ C++/tuples/: CMakeLists.txt
300_0penCV/: .gitignore  1_showImage.cpp  2_videoCapture.cpp  3  3_showUI.cpp  4.cpp  5.cpp  CMakeLists.txt  test.cpp
301_OpenCV/: .gitignore  1_showImage.cpp  2  2_3_showVideo.cpp  2_4_showVideo.cpp  2_5_blur.cpp  2_showVideo.cpp  CMakeLists.txt
3_STL_C++/: .gitignore  CMakeLists.txt  CMakeLists.txt.user.177b7cd  CMakeLists.txt.user.ba6e5a5
3_STL_C++/.kdev4/: .gitignore  3_STL_C++.kdev4
3_STL_C++/algo/: CMakeLists.txt
3_STL_C++/build-cmake-Debug/: CMakeCache.txt
3_STL_C++/concurrency/: CMakeLists.txt
3_STL_C++/cont/: CMakeLists.txt
3_STL_C++/fo/: CMakeLists.txt
3_STL_C++/num/: CMakeLists.txt
3_STL_C++/regex/: CMakeLists.txt
3_STL_C++/string/: CMakeLists.txt
3_STL_C++/util/: CMakeLists.txt
5_boost_asio_network_programming_cookbook/: .gitignore  5_boost_asio_network_programming_cookbook  CMakeLists.txt
5_boost_asio_network_programming_cookbook/01_Basic/: Accepting_a_connection.cpp  Binding_a_socket_TCP_passive.cpp  Binding_a_socket_UDP_active.cpp  CMakeLists.txt  Resolving_a_DNS_name_TCP.cpp  Resolving_a_DNS_name_UDP.cpp
5_boost_asio_network_programming_cookbook/02_IO_operations/: CMakeLists.txt  CancellingAsyncOperations.cpp  ReadingFromTCPSockAsync.cpp  ReadingFromTCPSockAsyncEnhanced.cpp  WritingToTCPSockAsync.cpp
5_boost_asio_network_programming_cookbook/03_Implementing_client_applications/: AsyncTCPClient.cpp  CMakeLists.txt
5_boost_asio_network_programming_cookbook/04_Implementing_server_applications/: CMakeLists.txt
5_boost_asio_network_programming_cookbook/05_Code/: HTTPClient.cpp
5_boost_asio_network_programming_cookbook/05_HTTP_and_SSL_TLS/: CMakeLists.txt
5_boost_asio_network_programming_cookbook/06_Other_Topics/: CMakeLists.txt
5_boost_asio_network_programming_cookbook/S-607_client_server/: CMakeLists.txt
5_boost_asio_network_programming_cookbook/build-cmake/: 5_ASIO.sublime-project  ASIO.sublime-project  CMakeCache.txt  Makefile  Project.sublime-project  cmake_install.cmake
5_boost_asio_network_programming_cookbook/shared/: CMakeLists.txt  INIReader.h
6_BOOST_development_cookbook/: .gitignore  CMakeLists.txt  notes
6_BOOST_development_cookbook/01_01_program_options/: CMakeLists.txt  main.cpp
6_BOOST_development_cookbook/01_01_program_options_config/: CMakeLists.txt  apples_oranges.ini  main.cpp
6_BOOST_development_cookbook/01_02_any/: CMakeLists.txt  main  main.cpp  main2.cpp
6_BOOST_development_cookbook/01_03_variant/: main  (+2 more)
72_Parallel_programming/: .gitignore  CMakeLists.txt  CMakeLists.txt.user.e0249c6  listing_2.1.cpp  listing_2.2.cpp  listing_2.3.cpp  listing_2.4.cpp  listing_2.5.cpp  listing_2.6.cpp  listing_2.7.cpp  listing_2.7_1.cpp  listing_2.8.cpp  listing_3.1.cpp  listing_3.2.cpp  listing_3.3.cpp  listing_3.4.cpp  listing_3.5.cpp
76_С++_17_STL/: CMakeLists.txt
78_Functional_programming/: .gitignore  CMakeLists.txt
7_Прата С - Язык программирования С++/: .gitignore  CMakeLists.txt
8_C++17_STL/: .gitignore  CMakeLists.txt
C++20_Josuttis/: .gitignore  CMakeLists.txt  cppstd20-code.tar
C++geek/: CMakeLists.txt  string_contain_only_letters.cpp  string_methods.cpp  tokenize_string.cpp
Khadas_aqua/: .goutputstream-SWAOQ2  .goutputstream-TW28Q2  .main.cpp.swp  CMakeLists.txt  aqua  build.sh  config  config.autosave.YYckKl  config.qrymoU  config.shaGhE  links  main.cpp  main.cpp.JvSdlQ  tempread.sh  tempread.sh.save  wiringpi-python.py  Аквариум_температура.ods
Lessons_Youtube_C++17/: CMakeLists.txt  any_optional_variant.cpp  cls_tmp_arg_deduction.cpp  decomposing.cpp  filesystem_library.cpp  fold_expression.cpp
OpenCV_examples/: 1.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  CMakeLists.txt  test.cpp
POCO_tests/: .gitignore  CMakeLists.txt  POCO_tests.kdev4
Qt_6_4_Examples/: CMakeLists.txt  delayedencoding.qdoc  desktopservices.qdoc  embeddedsvgviewer.qdoc  fluidlauncher.qdoc  framebufferobject.qdoc  weatherinfo.qdoc
Test_11_02_2021/: CMakeLists.txt  create.cpp  file2  file3  impl.cpp  in  main.cpp  main.h  parsing.cpp  parsing_config.ini  parsingfiles.cpp  parsingfiles.h  result  separators.ini  Задание
Test_30_04_2021/: CMakeLists.txt  config.ini  m1.cpp  Задание
Videokurs_7_C++/: CMakeLists.txt
Videokurs_8_Patterns/: CMakeLists.txt
Videokurs_9_qtPatterns/: .gitignore  CMakeLists.txt
cppreference.com/: .gitignore  CMakeLists.txt
openCL_examples_2/: CMakeLists.txt
openCL_examples_3/: CMakeLists.txt
С++20_in_detail/: .directory  CMakeLists.txt
(+9559 files in other folders)
