set(CMAKE_CXX_STANDARD 17)
   
add_executable(7.12_Functions_Lambda 7.12_Functions_Lambda.cpp)
add_executable(8.1_Pointers_ReferencingOperator 8.1_Pointers_ReferencingOperator.cpp)
add_executable(8.3_Pointers_OnePtrManyIntegers 8.3_Pointers_OnePtrManyIntegers.cpp)
add_executable(8.4_Pointers_Dereferencing_or_IndirectionOperator 8.4_Pointers_Dereferencing_or_IndirectionOperator.cpp)
add_executable(8.5_Pointers_AssigningUsingDerefOp 8.5_Pointers_AssigningUsingDerefOp.cpp)
add_executable(8.6_Pointers_sizeof_Test 8.6_Pointers_sizeof_Test.cpp)

add_executable(26.1_MinimalSmartPtr 26.1_MinimalSmartPtr.cpp )



