set(CMAKE_CXX_STANDARD 17)
project(1_Musser_C++_STL)

ADD_EXECUTABLE(ex02-01_STL_generic_reverse_algorithm_with_string_and_array ex02-01.cpp)
ADD_EXECUTABLE(ex02-02_STL_generic_reverse_algorithm_with_vector ex02-02.cpp)
ADD_EXECUTABLE(ex02-03_STL_generic_reverse_algorithm_with_list ex02-03.cpp)
ADD_EXECUTABLE(ex02-04_STL_map ex02-04.cpp)
ADD_EXECUTABLE(ex02-05_generic_find_algorithm_with_array ex02-05.cpp)
ADD_EXECUTABLE(ex02-06_generic_find_algorithm_with_vector ex02-06.cpp)
ADD_EXECUTABLE(ex02-07_generic_find_algorithm_with_list ex02-07.cpp)
ADD_EXECUTABLE(ex02-08_generic_find_algorithm_with_deque ex02-08.cpp)
ADD_EXECUTABLE(ex02-09_generic_merge_algorithm_with_array_list_deque ex02-09.cpp)
ADD_EXECUTABLE(ex02-10_generic_merge_algorithm_with_array_list_deque ex02-10.cpp)
ADD_EXECUTABLE(ex02-11_generic_accumulate_function ex02-11.cpp)
ADD_EXECUTABLE(ex02-12_generic_accumulate_function ex02-12.cpp)
ADD_EXECUTABLE(ex02-13_generic_accumulate_function_function_object ex02-13.cpp)
ADD_EXECUTABLE(ex02-14_generic_accumulate_function_multiplies ex02-14.cpp)
ADD_EXECUTABLE(ex02-15_generic_accumulate_algorithm_reverse_iterator ex02-15.cpp)

