set(CMAKE_CXX_STANDARD 17)
project("2_Templates_C++")

add_subdirectory(basics)
add_subdirectory(bridge)
add_subdirectory(tuples)
add_subdirectory(debugging)

#add_subdirectory(deduce)
#add_subdirectory(details)
#add_subdirectory(exprtmpl)
#add_subdirectory(inherit)
#add_subdirectory(meta)
#add_subdirectory(names)
#add_subdirectory(overload)
#add_subdirectory(poly)
#add_subdirectory(traits)
#add_subdirectory(typelist)
#add_subdirectory(typeoverload)
#add_subdirectory(utils)
#add_subdirectory(variant)
