project("2_Templates_C++")

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_BUILD_TYPE debug)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++2a")


add_subdirectory(basics)
add_subdirectory(bridge)
add_subdirectory(tuples)
add_subdirectory(debugging)

#add_subdirectory(deduce)
#add_subdirectory(details)
#add_subdirectory(exprtmpl)
#add_subdirectory(inherit)
#add_subdirectory(meta)
#add_subdirectory(names)
#add_subdirectory(overload)
#add_subdirectory(poly)
#add_subdirectory(traits)
#add_subdirectory(typelist)
#add_subdirectory(typeoverload)
#add_subdirectory(utils)
#add_subdirectory(variant)
