set(CMAKE_CXX_STANDARD 17)
project(3_STL_C++)

add_subdirectory(algo)
add_subdirectory(alloc) #не завершено
add_subdirectory(concurrency)
add_subdirectory(cont)
#add_subdirectory(contadapt)
add_subdirectory(fo)
#add_subdirectory(18n)
#add_subdirectory(io)
#add_subdirectory(iter)
#add_subdirectory(lang)
#add_subdirectory(num)
add_subdirectory(regex)
#add_subdirectory(stl)
add_subdirectory(string)
add_subdirectory(util)
