cmake_minimum_required(VERSION 3.5)
project(6_BOOST_development_cookbook)

add_subdirectory(01_01_program_options)
add_subdirectory(01_01_program_options_config)
add_subdirectory(01_02_any)
add_subdirectory(01_03_variant)
add_subdirectory(01_04_A_any_db_example)
add_subdirectory(01_04_B_variant_db_example)
add_subdirectory(01_05_optional)
add_subdirectory(01_06_array)
add_subdirectory(01_07_A_tuple)
add_subdirectory(01_07_B_tuple_construction_order)
add_subdirectory(01_08_bind)
add_subdirectory(01_09_type_index)
add_subdirectory(01_10_A_move)
add_subdirectory(01_11_noncopyable)
add_subdirectory(01_12_A_noncopyable_movable)
add_subdirectory(01_13_algorithm)
add_subdirectory(02_01_scoped_ptr)
add_subdirectory(02_02_shared_ptr)
add_subdirectory(02_03_scoped_array)
add_subdirectory(02_04_shared_array)
add_subdirectory(02_05_function_fobject)
add_subdirectory(02_06_function_fpointer)
add_subdirectory(02_07_function_lambda_c++11)
add_subdirectory(02_08_ptr_container_c++11)
add_subdirectory(02_09_scope_exit)
add_subdirectory(02_10_base_from_member)
add_subdirectory(03_01_lexical_to_number)
add_subdirectory(03_02_lexical_to_string)
add_subdirectory(03_03_numeric_cast)
add_subdirectory(03_04_lexical_user_defined)
add_subdirectory(03_05_polymorphic_cast)
add_subdirectory(03_06_spirit)
add_subdirectory(03_07_spirit_rules)
add_subdirectory(04_01_conditional)
add_subdirectory(04_02_disable_if_c)
add_subdirectory(04_03_enable_if_c)
add_subdirectory(04_04_is_stdvector)
add_subdirectory(04_05_mpl_int_)
add_subdirectory(04_06_static_assert)
add_subdirectory(04_07_typeof)
add_subdirectory(05_01_atomics)
add_subdirectory(05_02_interruptions)
add_subdirectory(05_03_mutex)
add_subdirectory(05_04_shared_lock)
add_subdirectory(05_05_thread)
add_subdirectory(05_06_thread_group)
add_subdirectory(05_07_thread_specific_ptr)
add_subdirectory(05_08_work_queue)
add_subdirectory(06_01_tasks_processor_base)

#add_subdirectory(06_02_tasks_processor_timers)
#add_subdirectory(06_03_tasks_processor_network)
#add_subdirectory(06_04_tasks_processor_multithread)
#add_subdirectory(06_05_conveyor)
#add_subdirectory(06_06_nonblocking_barrier)
#add_subdirectory(06_07_exception_ptr)
#add_subdirectory(06_08_tasks_processor_signals)

add_subdirectory(07_01_case_conv)
#add_subdirectory(07_02_regex_match)

add_subdirectory(07_03_regex_replace)
add_subdirectory(07_04_format)
add_subdirectory(07_05_string_algo)
add_subdirectory(07_06_iterator_range)
add_subdirectory(07_07_string_ref)
add_subdirectory(08_01_vector_of_types)
add_subdirectory(08_02_manipulating_vector_of_types)
add_subdirectory(08_03_result_of_c++11)
add_subdirectory(08_04_higher_order_metafunctions)
#add_subdirectory(08_05_lazy)
#add_subdirectory(08_06_tuple_to_string)
#add_subdirectory(08_07_splitting_tuple)
#add_subdirectory(09_01_hash)
#add_subdirectory(09_02_unordered)
#add_subdirectory(09_03_bimap)
#add_subdirectory(09_04_multiindex)
#add_subdirectory(09_05_slist_and_pool)
#add_subdirectory(09_06_flat)
#add_subdirectory(10_01_int128)
#add_subdirectory(10_02_no_rtti)
#add_subdirectory(10_03_extern_template)
#add_subdirectory(10_04_constexpr_c++11)
#add_subdirectory(10_05_noexcept_c++11)
#add_subdirectory(10_06_export_import)
#add_subdirectory(10_07_my_library)
#add_subdirectory(10_08_version)
#add_subdirectory(11_01_listing_files)
#add_subdirectory(11_02_erasing_files)
#add_subdirectory(11_03_interprocess_basics)
#add_subdirectory(11_04_interprocess_queue)
#add_subdirectory(11_05_interprocess_pointers)
#add_subdirectory(11_06_reading_files)
#add_subdirectory(11_07_coroutines)
#add_subdirectory(12_01_graph)
#add_subdirectory(12_02_graph_vis)
#add_subdirectory(12_03_random)
#add_subdirectory(12_04_math)
#add_subdirectory(12_05_testing)
#add_subdirectory(12_06_testing_advanced)
#add_subdirectory(12_07_gil)
