cmake_minimum_required(VERSION 3.15)

#set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_BUILD_TYPE debug)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++2a")


project(78_Functional_programming)

add_subdirectory(chapter-01)
add_subdirectory(chapter-02)
add_subdirectory(chapter-03)
#add_subdirectory(chapter-04)
#add_subdirectory(chapter-06)
#add_subdirectory(chapter-07)
#add_subdirectory(chapter-09)
#add_subdirectory(chapter-10)
#add_subdirectory(chapter-11)
#add_subdirectory(chapter-12)
#add_subdirectory(chapter-13)
