set(CMAKE_CXX_STANDARD 17)
cmake_minimum_required(VERSION 3.5)
project("7_C++")

add_subdirectory(Chapter_2)
add_subdirectory(Chapter_3)
#add_subdirectory(Chapter_4)
#add_subdirectory(Chapter_5)
#add_subdirectory(Chapter_6)
#add_subdirectory(Chapter_7)
#add_subdirectory(Chapter_8)
#add_subdirectory(Chapter_9)
#add_subdirectory(Chapter_10)
#add_subdirectory(Chapter_11)
#add_subdirectory(Chapter_12)
#add_subdirectory(Chapter_13)
#add_subdirectory(Chapter_14)
#add_subdirectory(Chapter_15)
#add_subdirectory(Chapter_16)
#add_subdirectory(Chapter_17)
#add_subdirectory(Chapter_18)
#add_subdirectory(Appendix_E)
#add_subdirectory(Appendix_G)
