project(8_C++17)

#add_subdirectory(Chapter01)
#add_subdirectory(Chapter02)
#add_subdirectory(Chapter03)
add_subdirectory(Chapter04_lambdas)
#add_subdirectory(Chapter05)
#add_subdirectory(Chapter06)
#add_subdirectory(Chapter07)
#add_subdirectory(Chapter08)
add_subdirectory(Chapter09_concurrency) #Не завершено
#add_subdirectory(Chapter10)
